# ComfyUI-MieNodes

./: .gitattributes  .gitignore  LOOP_USAGE.md  README.md  README_CN.md  README_EN.md  __init__.py  audio_operator.py  caption_file_operator.py  common.py  conftest.py  downloader.py  image_operator.py  llm_service_connector.py  loop.py  mie_llm_keys.json.example  piece.py  prompt_generator.py  pyproject.toml  requirements.txt  string_operator.py  translator.py  tts_generator.py  tts_service_connector.py  utils.py
core/: utils.py
docs/: LOOP_USAGE.md  PLAN_LOOP_FINALIZE_INCREMENTAL_MERGE.md  PLAN_LOOP_FLAT_EXPAND.md  for_design.md
js/: classicAspectRatio.js  mieForStart.js  mieLoopAdvancedFields.js  showAndSaveAnything.js  showAnything.js  stringFormatAutogrow.js  textNodes.js
scripts/: build_ideogram4_system_prompts.py  chunked_merge.py  manual_merge_offloaded_images.py  regen_bernini_prompts.py  sync_to_comfyui.bat  sync_to_comfyui.ps1  sync_to_comfyui.py  vram_pin.py
services/: __init__.py  llm.py  tts.py
tests/: _node_contracts_baseline.json  _probe_one.py  conftest.py  test_aspect_ratio_from_size.py  test_bernini_reference_video_frames.py  test_bernini_timeout_override.py  test_custom_system_prompt_nodes.py  test_ideogram4_prompt_formatter.py  test_ideogram4_prompt_generator.py  test_krea2_prompts.py  test_llm_mimo.py  test_llm_retry_logging.py  test_loop_e2e_lifecycle.py  test_loop_finalize_chunked.py  test_loop_finalize_incremental.py  test_loop_graph.py  test_loop_nodes.py  test_loop_optimization.py  test_loop_pure.py  test_loop_runtime.py  (+21 more)
(+81 files in other folders)
