[project]
name = "comfyui_mienodes"
description = "Offering a series of utility nodes designed to simplify workflows and enhance efficiency"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/MieMieeeee/ComfyUI-MieNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mie"
DisplayName = "ComfyUI_MieNodes"
Icon = ""
