[project]
name = "comfyui_mienodes"
description = "Offering a series of utility nodes designed to simplify workflows and enhance efficiency"
version = "1.0.13"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/MieMieeeee/ComfyUI-MieNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mie"
DisplayName = "ComfyUI_MieNodes"
Icon = "https://github.com/MieMieeeee/ComfyUI-MieNodes/blob/2f617ba2539e8fd13a91fe790e6b5e9ae1718a58/images/channels4_profile.jpg?raw=true"
